# gdnative-project

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SConstruct  compile-base.sh  gdnative-init  godot-init  setup.sh  template.sh
base/: .gitignore  icon.png.import  project.godot
base/.godot/editor/: Init.tscn-editstate-ec1a0f1a670c1040bf228cca2452aac5.cfg  editor_layout.cfg  filesystem_cache7  filesystem_update4  project_metadata.cfg  recent_dirs  script_editor_cache.cfg
base/.godot/imported/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  splash_disable.png-09123e928f82fe5e9c1a7d78e96f947b.md5  splash_disable.png-09123e928f82fe5e9c1a7d78e96f947b.stex
base/base/core/: Init.gd  Init.tscn  SceneManager.tscn  Settings.gd  Settings.tscn  splash_disable.png.import
base/lib/: libbase.gdnlib
base/source/: CMakeLists.txt  CMakeSettings.json  version.txt
base/source/src/: base.cpp
example/: .gitignore  README.md  project.godot
example/gdns/: GDExample.gdns
example/lib/: libexample.gdnlib
example/scenes/: Example.tscn
example/source/: CMakeLists.txt  version.txt
example/source/src/: gdexample.cpp  gdexample.hpp  gdlib.cpp
